# sc3-plugins

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  .travis_cpy.yml  CMakeCache.txt  CMakeLists.txt  DEVELOPING.md  Generate_Quark.scd  INSTALL  README.md  README_MACOS.txt.in  README_WINDOWS.txt  README_WINDOWS.txt.in  SConstruct  TODO  VERSION  _config.yml  compile.sh  distro  distro_linux  index.md  plugins_list.md  readme_cmake.txt  readme_devs.txt  readme_linux.txt  readme_package.txt  readme_windows.txt  update_list_in_readme.bash
osx_package/: CMakeLists.txt  CMakeOSXBundle.cmake  README-for-mac-distro.txt
quarks/: CMakeLists.txt  Generate_Quark.scd  SC3pluginsQuarks.help.scd
quarks/DIRECTORY/: AYUGens.quark  BhobUGens.quark  GlitchUGens.quark  LadspaUGens.quark  LoopBufUGens.quark  MCLDUGens.quark  MLfftwUGens.quark  VOSIMUGens.quark
source/: AY_UGen.cpp  AmbisonicUGens.cpp  BBCut2UGens.cpp  BEQSuiteUGens.cpp  BatPVUgens.cpp  BatUGens.cpp  BerlachUGens.cpp  BhobChaos.cpp  BhobFFT.cpp  BhobFilt.cpp  BhobGrain.cpp  BhobNoise.cpp  Bit.cpp  BlackrainUGens.cpp  CMakeLists.txt  Concat.cpp  FFT2InterfaceBhob.cpp  GlitchUGens.cpp  JoshAmbiUGens.cpp  JoshGrainUGens.cpp  JoshPVUGens.cpp  JoshUGens.cpp  LadspaUGens.cpp  LoopBuf.cpp  MCLDBufferUGens.cpp  MCLDCepstrumUGens.cpp  MCLDChaosUGens.cpp  MCLDDistortionUGens.cpp  MCLDFFTTriggeredUGen.cpp  MCLDFFTUGens.cpp  MCLDFilterUGens.cpp  MCLDGetenvUGen.cpp  MCLDOscUGens.cpp  MCLDPollUGens.cpp  MCLDSOMUGens.cpp  MCLDTreeUGens.cpp  MCLDTriggeredStatsUgens.cpp  MCLD_CQ_UGens.cpp  Membrane.cpp  Membrane_shape.c  (+13 more)
source/ATK/: AtkUGens.cpp
source/AYUGens/: AYUGens.html  AY_UGen.cpp
source/AntiAliasingOscillators/: AntiAliasingOscillators.cpp
source/AuditoryModeling/: AuditoryModelingUGens.cpp  MeddisHairCell.cpp  MeddisHairCell.h  SimpleHairCell.cpp  SimpleHairCell.h
source/BBCut2UGens/: AnalyseEvents2.html  AutoTrack.sc  BBCut2UGens.cpp  DrumTrack.cpp
source/BatUGens/: BatPVUgens.cpp  BatPVUgens.cpp.OFF  BatUGens.cpp  BatUGens.html  BatUGens.sc
source/BerlachUGens/: BerlachUGens.cpp  Oversamp.h
source/BetablockerUGens/: BetaBlockerUGens.h  BetaBlockerUGensUnused.cpp  BetablockerUGens-todo  BetablockerUGens.cpp
source/BhobUGens/: BhobChaos.cpp  BhobFFT.cpp  BhobFilt.cpp  BhobGrain.cpp  BhobNoise.cpp
source/BitUGens/: Bit.cpp  BitAnd.html  BitRightShift.html
source/BlackrainUGens/: BlackrainUGens.cpp
source/ChaosUGens/: NoiseRing.cpp  PredPrey.cpp
source/ConcatUGens/: Concat.cpp
source/DEINDUGens/: DEINDreverb.cpp  DiodeRing.cpp  DiodeRingMod.cpp  GreyholeRaw.cpp  JPverb.cpp  JPverbLiteRaw.cpp  JPverbRaw.cpp  NoiseRing.cpp  RMS.cpp  complexRes.cpp
source/DWGUGens/: DWGBowed.cpp  DWGPlucked.cpp
source/DistortionUGens/: DistortionPlugins.sc  DistortionUGens.cpp  DistortionUGens.html
source/GlitchUGens/: GlitchUGens.cpp  GlitchUGens.sc
source/HOAUGens/: HOAAzimuthRotator1.cpp  HOAAzimuthRotator10.cpp  HOAAzimuthRotator2.cpp  HOAAzimuthRotator3.cpp  HOAAzimuthRotator4.cpp  HOAAzimuthRotator5.cpp  HOAAzimuthRotator6.cpp  HOAAzimuthRotator7.cpp  HOAAzimuthRotator8.cpp  HOAAzimuthRotator9.cpp  HOABeamDirac2HOA1.cpp  HOABeamDirac2HOA10.cpp  HOABeamDirac2HOA2.cpp  HOABeamDirac2HOA3.cpp  HOABeamDirac2HOA4.cpp  HOABeamDirac2HOA5.cpp  HOABeamDirac2HOA6.cpp  HOABeamDirac2HOA7.cpp  HOABeamDirac2HOA8.cpp  HOABeamDirac2HOA9.cpp  HOABeamDirac2Hoa1.cpp  HOABeamDirac2Hoa2.cpp  HOABeamDirac2Hoa3.cpp  HOABeamDirac2Hoa4.cpp  HOABeamDirac2Hoa5.cpp  HOABeamHCardio2HOA1.cpp  HOABeamHCardio2HOA2.cpp  HOABeamHCardio2HOA3.cpp  HOABeamHCardio2Mono1.cpp  HOABeamHCardio2Mono2.cpp  HOABeamHCardio2Mono3.cpp  HOABeamHCardioid2Hoa1.cpp  HOABeamHCardioid2Hoa2.cpp  HOABeamHCardioid2Hoa3.cpp  HOAConverter1.cpp  HOAConverter2.cpp  HOAConverter3.cpp  HOAConverter4.cpp  HOAConverter5.cpp  HOAConverterAcnN3d2AcnSn3d1.cpp  (+116 more)
source/JoshUGens/: AmbisonicUGens.cpp  JoshAmbiUGens.cpp  JoshGrainUGens.cpp  JoshPVUGens.cpp  JoshUGens.cpp  PermUGens.cpp
source/LFSRNoiseUGens/: LFSRNoise.cpp
source/LadspaUGen/: LadspaUGen.cpp  README  ladspalist.c  search.c  test.scd  utils.h
source/LoopBufUGens/: LoopBuf.cpp  LoopBufUGens.html
source/MCLDUGens/: MCLDBufferUGens.cpp  MCLDCepstrumUGens.cpp  MCLDCepstrumUGens.cpp.OFF  MCLDCepstrumUGens.sc  MCLDChaosUGens.cpp  MCLDChaosUGens.sc  MCLDDistortionUGens.cpp  MCLDDistortionUGens.sc  MCLDFFTTriggeredUGen.cpp.OFF  MCLDFFTUGens.cpp  MCLDFilterUGens.cpp  MCLDFilterUGens.sc  MCLDGetenvUGen.cpp  MCLDGetenvUGen.sc  MCLDOscUGens.cpp  MCLDPollUGens.cpp  MCLDPollUGens.cpp.OFF  MCLDPollUGens.sc  MCLDSOMUGens.cpp  MCLDSparseUGens.cpp  MCLDTreeUGens.cpp  MCLDTreeUGens.sc  MCLDTriggeredStatsUGens.sc  MCLDTriggeredStatsUgens.cpp  MCLDUGens.html  MCLD_CQ_UGens.cpp.OFF  MCLD_CQ_UGens.sc
source/MLfftwUGens/: AnalyseEvents2fftw.cpp  AnalyseEvents2fftw.h  AutoTrackfftw.cpp  AutoTrackfftw.h  Concatfftw.cpp  Concatfftw.h  MLfftwUGens.cpp  MLfftwUGens.h  Qitchfftw.cpp  Qitchfftw.h  Tartini.cpp  Tartini.h
source/MdaUGens/: MdaUGens.cpp  MdaUGens.html  MdaUGens.sc  mdaPianoData.h  mdaPiano_sc3.h
source/MembraneUGens/: Membrane.cpp  Membrane_shape.c  Membrane_shape.h  README  membrane.lhs  triangulation.pde
source/NCAnalysis/: LPCAnalysis.cpp  LPCAnalysis.h  LPCAnalyzer.cpp  NCAnalysis.cpp  NCAnalysis.h  SMS.cpp  TPV.cpp  WalshHadamard.cpp  WaveletDaub.cpp  kaplandaub.h
source/NCAnalysisUGens/: LPCAnalysis.cpp  LPCAnalysis.h  LPCAnalyzer.cpp  MedianSeparation.cpp  NCAnalysis.cpp  NCAnalysis.h  SMS.cpp  TPV.cpp  WalshHadamard.cpp  WaveletDaub.cpp  kaplandaub.h
source/NHUGens/: NHHall.cpp  nh_hall.hpp
source/Neuromodules/: Neuromodules.cpp
source/NovaDiskIO/: CMakeLists.txt  NovaDiskIO.cpp  NovaUtils.hpp  tlsf_allocator.hpp
source/NovaUGens/: FeedbackAM.cpp  Interpolators.hpp  NovaDiskIO.cpp  NovaFilters.cpp  NovaGendy.cpp  NovaOsc.cpp  NovaUGensCommon.hpp
source/OteyPianoUGens/: DWG.cpp  DWG.hpp  OteyPiano.cpp  README  dwgs.cpp  dwgs.h  filter.cpp  filter.h  hammer.cpp  hammer.h  piano.h  reverb.cpp  reverb.h  types.h
source/PhasorUGens/: Fasor.cpp  LoopPhasor.cpp
source/PitchDetection/: PitchDetection.cpp  (+5 more)
(+1087 files in other folders)
